--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Publications"
-    url: /publications/
+#   - title: "Publications"
+#     url: /publications/
     
 #   - title: "Guide"
 #     url: /markdown/
